[gd_scene load_steps=5 format=3 uid="uid://c8v7iyhjbrmdw"]

[ext_resource type="Script" path="res://Main/PlayerMarkers.gd" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="2"]
[ext_resource type="Script" path="res://UI/Camera.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://c7qcqakji48gm" path="res://UI/UI.tscn" id="4"]

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -2.0
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="camera" type="Camera2D" parent="." groups=["camera"]]
position = Vector2(175, 258)
zoom = Vector2(0.1, 0.1)
script = ExtResource("3")

[node name="MapCoordinateSpace" type="Node2D" parent="."]

[node name="MapLayers" type="Node2D" parent="MapCoordinateSpace"]
scale = Vector2(0.1, 0.1)

[node name="Layer 0" type="Node2D" parent="MapCoordinateSpace/MapLayers"]
visible = false

[node name="Layer 1" type="Node2D" parent="MapCoordinateSpace/MapLayers"]
visible = false

[node name="Layer 2" type="Node2D" parent="MapCoordinateSpace/MapLayers"]
visible = false

[node name="Layer 3" type="Node2D" parent="MapCoordinateSpace/MapLayers"]
visible = false

[node name="Layer 4" type="Node2D" parent="MapCoordinateSpace/MapLayers"]
visible = false

[node name="Layer 5" type="Node2D" parent="MapCoordinateSpace/MapLayers"]
visible = false

[node name="Layer 6" type="Node2D" parent="MapCoordinateSpace/MapLayers"]
visible = false

[node name="Layer 7" type="Node2D" parent="MapCoordinateSpace/MapLayers"]
visible = false

[node name="Layer 8" type="Node2D" parent="MapCoordinateSpace/MapLayers"]
visible = false

[node name="Layer 9" type="Node2D" parent="MapCoordinateSpace/MapLayers"]
visible = false

[node name="EnemySetMarkers" type="Node2D" parent="MapCoordinateSpace"]
visible = false

[node name="GatheringSpotMarkers" type="Node2D" parent="MapCoordinateSpace"]
visible = false

[node name="PlayerMarkers" type="Node2D" parent="MapCoordinateSpace"]
visible = false
script = ExtResource("1")

[node name="ui" parent="." instance=ExtResource("4")]

[node name="left" parent="ui" index="0"]
mouse_force_pass_scroll_events = false

[node name="status_view" parent="ui" index="1"]
anchors_preset = -1
anchor_bottom = 0.05
offset_bottom = 0.0
grow_horizontal = 1

[node name="Right Panel" parent="ui" index="2"]
mouse_force_pass_scroll_events = false

[node name="SettingsWindowDialog" parent="ui" index="4"]
visible = false

[node name="EnemyFileDialog" parent="ui" index="5"]
size = Vector2i(460, 164)

[node name="ItemFileDialog" parent="ui" index="6"]
size = Vector2i(460, 164)

[connection signal="gui_input" from="." to="camera" method="_on_root_gui_input"]
[connection signal="player_activated" from="ui" to="." method="_on_ui_player_activated"]
[connection signal="stage_selected" from="ui" to="." method="_on_ui_stage_selected"]
[connection signal="tab_changed" from="ui/left/tab" to="." method="_on_tab_tab_changed"]
[connection signal="player_joined" from="ui/left/tab/Players" to="MapCoordinateSpace/PlayerMarkers" method="_on_Players_player_joined"]
[connection signal="player_left" from="ui/left/tab/Players" to="MapCoordinateSpace/PlayerMarkers" method="_on_Players_player_left"]
[connection signal="player_updated" from="ui/left/tab/Players" to="MapCoordinateSpace/PlayerMarkers" method="_on_Players_player_updated"]
[connection signal="item_selected" from="ui/status_view/container/LayerOptionButton" to="." method="_on_LayerOptionButton_item_selected"]

[editable path="ui"]
